# stend_modules

./: .gitignore  CMakeLists.txt  interface.h
demo_bcb_6/: demo_bcb_6.bpr  interface.h  list.def  main.cpp  run.lua
demo_image/: CMakeLists.txt  demo_image.cbp  demo_image.depend  interface.h  main.cpp  run.lua
demo_matrix/: CMakeLists.txt  demo_matrix.cbp  main.cpp
ica/: CMakeLists.txt  ica.cbp  ica.depend  main.cpp
meaningless_demo_bcb_6/: main.cpp  meaningless_demo_bcb_6.bpr  run.lua
muratov/: Project2.dof  Project2.dpr  run.lua  stend_interface.dcu  stend_interface.pas
simple/: CMakeLists.txt  interface.h  interface.hpp  main.cpp  simple.cbp
